syntax = "proto3";

package api.admin.v1;

// goland 设置第三方proto ：File | Settings | Languages & Frameworks | Protobuf，添加当前项目的third_party目录，OK-Apply
import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/ZQCard/kratos-base-project/project/admin/v1;v1";

service Admin {
	// 管理员登陆
	rpc Login(LoginRequest) returns (LoginReply) {
		option (google.api.http) = {
			post : "/admin/v1/login"
			body : "*"
		};
	};

	// 管理员退出
	rpc Logout(google.protobuf.Empty) returns (google.protobuf.Empty) {
		option (google.api.http) = {
			post : "/admin/v1/logout"
			body : "*"
		};
	};

	// 获取管理员信息
	rpc GetAdministratorInfo(google.protobuf.Empty) returns(GetAdministratorInfoReply) {
		option (google.api.http) = {
			get : "/admin/v1/getAdministratorInfo"
		};
	}

	// 创建商品
	rpc CreateGoods (CreateGoodsRequest) returns (GoodsInfoResponse){
		option (google.api.http) = {
			post : "/admin/v1/goods"
			body : "*"
		};
	};
	// 更新商品
	rpc UpdateGoods (UpdateGoodsRequest) returns (GoodsInfoResponse){
		option (google.api.http) = {
			put : "/admin/v1/goods"
			body : "*"
		};
	};
	// 删除商品
	rpc DeleteGoods (DeleteGoodsRequest) returns (GoodsCheckResponse){
		option (google.api.http) = {
			delete : "/admin/v1/goods/{id}"
		};
	};
	// 恢复商品
	rpc RecoverGoods (RecoverGoodsRequest) returns (GoodsCheckResponse){
		option (google.api.http) = {
			patch : "/admin/v1/goods"
			body : "*"
		};
	};
	// 商品详情
	rpc GetGoods (GetGoodsRequest) returns (GoodsInfoResponse){
		option (google.api.http) = {
			get : "/admin/v1/goods/{id}"
		};
	};
	// 商品列表
	rpc ListGoods (ListGoodsRequest) returns (ListGoodsReply){
		option (google.api.http) = {
			get : "/admin/v1/goods"
		};
	};
	// 商品出售
	rpc SaleGoods (SaleGoodsRequest) returns (SaleGoodsReply){
		option (google.api.http) = {
			post : "/admin/v1/goods/sale"
			body : "*"
		};
	};
	// 商品出售列表
	rpc SaleGoodsLogList (SaleGoodsLogListRequest) returns (SaleGoodsLogListReply){
		option (google.api.http) = {
			get : "/admin/v1/goods/sale/logs"
		};
	};
}

message SaleGoodsLogListRequest {
	int64 page_num = 1;
	int64 page_size = 2;
	int64 goods_id = 3;
}

message SaleGoodsLog {
	int64 id = 1;
	string name = 2;
	string style = 3;
	string size = 4;
	string code = 5;
	float price = 6;
	int64 number = 7;
	string created_at = 8;
}

message SaleGoodsLogListReply {
	int64 total = 1;
	repeated SaleGoodsLog list = 2;
}

message LoginRequest {
	string username = 1;
	string password = 2;
}

message LoginReply {
	string token = 1;
}

message GetAdministratorInfoReply {
	int64 id = 1;
	string username = 2;
	string mobile = 4;
	string nickname = 5;
	string avatar = 6;
	int64  status = 7;
	string created_at = 8;
	string updated_at = 9;
	string deleted_at = 10;
}


message CreateGoodsRequest {
	int64 id = 1;
	string name = 2;
	string style = 3;
	string size = 4;
	string code = 5;
	float price = 6;
	int64 number = 7;

}

message UpdateGoodsRequest {
	int64 id = 1;
	string name = 2;
	string style = 3;
	string size = 4;
	string code = 5;
	float price = 6;
	int64 number = 7;
}

message DeleteGoodsRequest {
	int64 id = 1;
}

message GetGoodsRequest {
	int64 id = 1;
}

message RecoverGoodsRequest {
	int64 id = 1;
}

message ListGoodsRequest {
	int64 page_num = 1;
	int64 page_size = 2;
	int64 id = 3;
	string name = 4;
	string style = 5;
	string size = 6;
	string code = 7;
	string deleted_at = 8;
}
message ListGoodsReply {
	int64 total = 1;
	repeated GoodsInfoResponse list = 2;
}

message GoodsInfoResponse {
	int64 id = 1;
	string name = 2;
	string style = 3;
	string size = 4;
	string code = 5;
	float price = 6;
	int64 number = 7;
	string created_at = 8;
	string updated_at = 9;
	string deleted_at = 10;
}

message GoodsCheckResponse{
	bool is_success = 1;
}

message SaleGoodsRequest{
	int64 id = 1;
	int64 number = 2;
}

message SaleGoodsReply{
	bool is_success = 1;
}